
    <resources>
        <string name="app_name">Warehouse</string>
        <string name="scanner">扫码</string>
        <string name="user_name">用户名</string>
        <string name="password">密码</string>
        <string name="input_user_name">请输入用户名</string>
        <string name="input_password">请输入密码</string>
        <string name="login">登录</string>
        <string name="sign_up">注册</string>
    </resources>


